(fix) mobile header spacing

--- a/styles/views/thoughts.module.scss
+++ b/styles/views/thoughts.module.scss
@@ -1,5 +1,5 @@
 .header {
-    @apply col-span-full md:col-span-8 lg:col-span-8;
+    @apply col-span-full md:col-span-8 lg:col-span-8 mb-24;
 }
 
 .thought {
